[package]
name = "thunderboard-sltb001a"
version = "0.1.0"
authors = ["chrysn <chrysn@fsfe.org>"]

edition = "2018"

categories = ["embedded", "no-std", "hardware-support"]
description = "Board support crate for the Silicon Labs Thunderboard Sense"
keywords = ["arm", "cortex-m", "efr32", "efr32mg"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/chrysn/thunderboard-sltb001a"
documentation = "https://docs.rs/thunderboard-sltb001a"

# explicit examples below are only for overriding dependencies
autoexamples = true

[dependencies]
cortex-m = "0.5.2"
efr32xg1 = "0.2.1"
embedded-hal = { version = "0.2.1", features = ["unproven"] }

efm32gg-hal = { version = "0.3.0", features = [ "chip-efr32xg1" ] }

# not really for features, just for "depend-" features that allow the
# dependency to be enabled for examples

panic-semihosting = { version = "0.5.1", optional = true }
cortex-m-semihosting = { version = "0.3.2", optional = true }
cortex-m-rt = { version = "0.6.7", optional = true }
heapless = { version = "0.4.1", optional = true }

[features]

depend-panic-semihosting = [ "panic-semihosting", "cortex-m-semihosting" ]
depend-cortex-m-rt = [ "cortex-m-rt" ]
depend-interrupts = [ "efr32xg1/rt" ]

led-pwm = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[[example]]
name = "blink"

required-features = ["depend-panic-semihosting", "depend-cortex-m-rt"]

[[example]]
name = "i2c"

required-features = ["depend-panic-semihosting", "depend-cortex-m-rt"]

[[example]]
name = "interrupt_blink"

required-features = ["depend-panic-semihosting", "depend-cortex-m-rt", "depend-interrupts", "heapless/const-fn"]
